# rusty_gl

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  glwrapper.h
.github/workflows/: build_test.yml  rust.yml
app/: Cargo.toml  build.rs
app/shaders/: fragment.frag
app/src/: lib.rs  main.rs
app/src/assimp/: mod.rs
app/src/framework/: camera.rs  mod.rs
app/src/framework/color/: rgb.rs
app/src/framework/drawelement/: mod.rs
app/src/framework/material/: material_textures.rs  mod.rs
app/src/framework/mesh/: load.rs  mod.rs  normalize.rs
app/src/framework/texture/: mod.rs  upload.rs
app/src/framework/texture/image/: format.rs  mod.rs
app/src/framework/texture/stbi/: dimensions.rs  format.rs  load.rs  load_trait.rs  map_channels.rs  mod.rs
app/src/math/: mat4.rs
app/src/math/vec3/: f32.rs
app/src/math/vec4/: f32.rs
build_utils/: Cargo.toml
build_utils/src/: lib.rs
gl_sys/: Cargo.toml  build.rs
gl_sys/src/: bindings.rs  lib.rs  program.rs  shader.rs  vao.rs  vbo.rs
glfw_sys/: Cargo.toml  build.rs
glfw_sys/src/: bindings.rs  lib.rs  window.rs
gmath/: Cargo.toml
gmath/src/: lib.rs  mat3.rs  mat4.rs
imgui_sys/: Cargo.toml  build.rs  imguiwrapper.cpp
imgui_sys/src/: bindings.rs  io.rs  lib.rs  wrapper.rs
rmath/: Cargo.toml
rmath/src/: lib.rs  mat4.rs  vec2.rs
rmath/src/vec3/: mod.rs
rmath/src/vec4/: f32.rs  mod.rs
shaders/: fragment.frag  vertex.vert
src/: lib.rs  main.rs
src/framework/: camera.rs  color.rs  material_key.rs  mod.rs
stbi_sys/: Cargo.toml  build.rs
transparent-wrapper/: Cargo.toml
(+72 files in other folders)
