[package]
name = "rusty_gl"
version = "0.1.0"
edition = "2024"

[dependencies]
assimp = "0.3.1"
assimp-sys = "0.3.1"
derive_more = { version = "2.1.1", features = ["full"] }
gl_sys = { path = "../gl_sys" }
glfw_sys = { path = "../glfw_sys" }
stbi_sys = { path = "../stbi_sys" }
imgui_sys = { path = "../imgui_sys" }
rmath = { path = "../rmath", features = ["assimp", "imgui"] }
